src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__if_or_with_tail.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
let a = 0
let b = 1

if a < b or b >= a {
  return 0
} else {
  return 1
}
}

OK
.fn @main
  params 0
  stack 3
  .locals
    a = r1
    b = r2
  .code
   0  lsmi r1, 0
   1  lsmi r2, 1
   2  isge r1, r2
   3  jmp 3   ; to 6
   4  isge r2, r1
   5  jmp 3   ; to 8
   6  lsmi r0, 0
   7  ret
   8  lsmi r0, 1
   9  ret
