src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__if_truthiness_negated.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let x = 1
let y = 0

if not x { return 1 }
if not y { return 2 }

OK
.fn @main
  params 0
  stack 4
  .locals
    x = r1
    y = r2
  .code
   0  lsmi r1, 1
   1  lsmi r2, 0
   2  isfalse r1
   3  jmp 3   ; to 6
   4  lsmi r0, 1
   5  ret
   6  isfalse r2
   7  jmp 3   ; to 10
   8  lsmi r0, 2
   9  ret
  10  ret
