src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__if_truthiness_variable.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let x = 1
let y = 0
let z = nil

if x { return 1 }
if y { return 2 }
if z { return 3 }

OK
.fn @main
  params 0
  stack 5
  .locals
    x = r1
    y = r2
    z = r3
  .code
   0  lsmi r1, 1
   1  lsmi r2, 0
   2  lnil r3
   3  istrue r1
   4  jmp 3   ; to 7
   5  lsmi r0, 1
   6  ret
   7  istrue r2
   8  jmp 3   ; to 11
   9  lsmi r0, 2
  10  ret
  11  istrue r3
  12  jmp 3   ; to 15
  13  lsmi r0, 3
  14  ret
  15  ret
