src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__if_truthiness_with_tail.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
let x = 1
let result = 0

if x {
    result = 10
} else {
    result = 20
}

result
}

OK
.fn @main
  params 0
  stack 4
  .locals
    x = r1
    result = r2
  .code
   0  lsmi r1, 1
   1  lsmi r2, 0
   2  istrue r1
   3  jmp 4   ; to 7
   4  lsmi r2, 10
   5  lnil r3
   6  jmp 3   ; to 9
   7  lsmi r2, 20
   8  lnil r3
   9  retv r2
