src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__import_named_multiple.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
import read_file, write_file, exists from "fs"
}

OK
.fn @main
  params 0
  stack 4
  .locals
     = r1
     = r2
     = r3
  .code
  0  import l0   ; {import "fs", n=3}
  1  lnil r0
  2  ret
